RESOLVED FIXED134780
[iOS] WebKit can crash under QuickLookDocumentData::encode() when viewing a QuickLook preview
https://bugs.webkit.org/show_bug.cgi?id=134780
Summary [iOS] WebKit can crash under QuickLookDocumentData::encode() when viewing a Q...
Andy Estes
Reported 2014-07-09 14:47:59 PDT
[iOS] WebKit can crash under QuickLookDocumentData::encode() when viewing a QuickLook preview
Attachments
Patch (1.74 KB, patch)
2014-07-09 14:54 PDT, Andy Estes
thorton: review+
Andy Estes
Comment 1 2014-07-09 14:54:56 PDT
Andy Estes
Comment 2 2014-07-09 14:58:42 PDT
Andy Estes
Comment 3 2014-07-09 14:59:31 PDT
Note You need to log in before you can comment on or make changes to this bug.