[iOS] WebKit can crash under QuickLookDocumentData::encode() when viewing a QuickLook preview https://bugs.webkit.org/show_bug.cgi?id=134780

Reviewed by Tim Horton.

Don't use CFDataCreateWithBytesNoCopy() when we can't guarantee the lifetime of the copied-from DataReference
will match or exceed that of the CFDataRef. Copy the data instead.

* WebProcess/Network/WebResourceLoader.cpp:
(WebKit::WebResourceLoader::didReceiveData):

Canonical link: https://commits.webkit.org/152721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170934 268f45cc-cd09-0410-ab3c-d52691b4dbfc